web-infras/parser/tests/fixtures/babel/es2022/private-in/private-in-parenthesized/output.txt
[SyntaxError]: Private names are only allowed in property accesses (`obj.#private`) or in `in` expressions (`#private in obj`). (4,6)
4|    (#x) in {};
 |    ^
